# protein-design-week

./: README.md
RCP/: EXAMPLE.md  GUIDE.md  LICENSE  analysis.ipynb  example_runs.sh  notes_on_guide.md  pipeline-sasa-general.ipynb  pyproject.toml
RCP/af3/: MSA_guide.md  README.md  alphafold3.def
RCP/af3/docker/: Dockerfile  README.md
RCP/boltz/: README.md
RCP/boltz/docker/: Dockerfile  README.md
RCP/carbonara/: README.md
RCP/carbonara/docker/: Dockerfile  README.md  carbonara.def
RCP/chai/: README.md
RCP/chai/docker/: Dockerfile  README.md
RCP/ligandmpnn/: README.md
RCP/ligandmpnn/docker/: Dockerfile  README.md
RCP/rfd3/: README.md
RCP/rfd3/docker/: Dockerfile.rfd3  README.md
RCP/utils/: __init__.py  result_parsers.py
hf-api/: api_wrappers.py  example_hf_api.ipynb  requirements.txt
hf-api/ppi_inputs/: ppi_tutorial.yaml
tool-kit/: useful-tools-post-prediction.ipynb  useful-tools-pre-predictions.ipynb
tool-kit/utils/: files_processing.py
