[project]
name = "rcp-containers"
version = "0.1.0"
description = "Result parsers and analysis utilities for protein design pipelines"
requires-python = ">=3.9"
dependencies = [
    "gemmi>=0.7.5",
    "numpy",
    "pandas",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
